added plotstats view

--- a/frontend/src/shared-styles.html
+++ b/frontend/src/shared-styles.html
@@ -27,6 +27,9 @@
       uwmctools-time-chart {
         padding: 20px;
       }
+      uwmctools-ratio-chart {
+        padding: 20px;
+      }
 
       .content {
         @apply(--layout-flex);
