--- a/frontend/src/uwmctools-view-plotstats-overview.html
+++ b/frontend/src/uwmctools-view-plotstats-overview.html
@@ -24,18 +24,21 @@
             subproperty="all"
             title="Alle Plots"
             exclude='["all"]'
+            show-value
         ></uwmctools-ratio-chart>
         <uwmctools-ratio-chart
             data="[[data]]"
             subproperty="free"
             title="Freie Plots"
             exclude='["all"]'
+            show-value
         ></uwmctools-ratio-chart>
         <uwmctools-ratio-chart
             data="[[data]]"
             subproperty="full"
             title="Belegte Plots"
             exclude='["all"]'
+            show-value
         ></uwmctools-ratio-chart>
     </div>
   </template>
