--- a/frontend/src/uwmctools-search-bar.html
+++ b/frontend/src/uwmctools-search-bar.html
@@ -1,5 +1,5 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
-<link rel="import" href="../bower_components/paper-search/paper-search-bar.html">
+<link rel="import" href="paper-search-bar.html">
 <link rel="import" href="../bower_components/lunr-js/lunr-js.html">
 <link rel="import" href="../bower_components/paper-item/paper-item.html">
 <link rel="import" href="../bower_components/paper-item/paper-item-body.html">
@@ -13,7 +13,6 @@
     <style include="shared-styles">
       :host {
         display: block;
-
       }
 
       uwmctools-player-card {
@@ -24,7 +23,6 @@
       paper-search-bar {
         background-color: var(--dark-primary-color);
         color: #fff;
-
         --disabled-text-color: #fff;
       }
 
