--- a/frontend/src/uwmctools-view-worldstats-area-south.html
+++ b/frontend/src/uwmctools-view-worldstats-area-south.html
@@ -8,6 +8,7 @@
     <script>
     Polymer({
       is: 'uwmctools-view-worldstats-area-south',
+      behaviors: [UwmctoolsChartViewBehavior],
     });
   </script>
 </dom-module>
