--- a/frontend/src/uwmctools-view-worldstats.html
+++ b/frontend/src/uwmctools-view-worldstats.html
@@ -60,12 +60,12 @@
           attr-for-selected="id"
           fallback-selection="overview">
           <uwmctools-view-worldstats-overview id="overview"></uwmctools-view-worldstats-overview>
-          <uwmctools-view-worldstats-area-main id="map"></uwmctools-view-worldstats-area-main>
+          <uwmctools-view-worldstats-area-full id="map"></uwmctools-view-worldstats-area-full>
           <uwmctools-view-worldstats-area-center id="center"></uwmctools-view-worldstats-area-center>
           <uwmctools-view-worldstats-area-north id="north"></uwmctools-view-worldstats-area-north>
           <uwmctools-view-worldstats-area-south id="south"></uwmctools-view-worldstats-area-south>
           <uwmctools-view-worldstats-area-east id="east"></uwmctools-view-worldstats-area-east>
-        </iron-pages>  
+        </iron-pages>
       </div>
       <uwmctools-footer></uwmctools-footer>
     </app-header-layout>
@@ -94,7 +94,7 @@
         tabToView : {
           value: {
             'overview': 'overview',
-            'map': 'area-main',
+            'map': 'area-full',
             'center': 'area-center',
             'north': 'area-north',
             'south': 'area-south',
