--- a/frontend/src/uwmctools-app.html
+++ b/frontend/src/uwmctools-app.html
@@ -106,7 +106,8 @@
     <platinum-sw-register id="sw"
                             auto-register
                             skip-waiting
-                            clients-claim>
+                            clients-claim
+                            href="/sw-import.js">
         <platinum-sw-cache default-cache-strategy="networkFirst"
                            precache="{{precacheList}}"></platinum-sw-cache>
     </platinum-sw-register>
@@ -117,9 +118,9 @@
         <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
           <a name="default" href="/">Übersicht</a>
           <a name="zonerank" href="/zoneranks/">Rangliste: Zonen</a>
-          <a name="worldstats" href="/worldstats/">Statistiken: Zonen</a>
-          <a name="plotstats" href="/plotstats/">Statistiken: Neulingszonen</a>
-          <a name="free" href="/freeareas/">Freie Gebiete</a>
+          <a name="worldstats" href="/worldstats/overview">Statistiken: Zonen</a>
+          <a name="plotstats" href="/plotstats/overview">Statistiken: Neulingszonen</a>
+          <a name="freeareas" href="/freeareas/">Freie Gebiete</a>
           <a name="player" href="/player/">Spieler Infos</a>
           <a name="players" href="/players/">Spieler Liste</a>
           <a name="faq" href="/faq/">FAQ</a>
@@ -138,6 +139,7 @@
           <uwmctools-view-default name="default"></uwmctools-view-default>
           <uwmctools-view-plotstats name="plotstats" route="{{subroute}}"></uwmctools-view-plotstats>
           <uwmctools-view-worldstats name="worldstats" route="{{subroute}}"></uwmctools-view-worldstats>
+          <uwmctools-view-freeareas name="freeareas"></uwmctools-view-freeareas>
           <uwmctools-view-404 name="404"></uwmctools-view-404>
       </iron-pages>
     </app-drawer-layout>
@@ -152,6 +154,16 @@
           type: String,
           reflectToAttribute: true,
           observer: '_pageChanged'
+        },
+        precacheList: {
+          type: Array,
+          value: [
+            '/worldstats/overview',
+            '/worldstats',
+            '/plotstats/overview',
+            '/plotstats/',
+            '/',
+          ]
         }
       },
 
