--- a/frontend/src/uwmctools-view-worldstats-area-center.html
+++ b/frontend/src/uwmctools-view-worldstats-area-center.html
@@ -8,6 +8,7 @@
     <script>
     Polymer({
       is: 'uwmctools-view-worldstats-area-center',
+      behaviors: [UwmctoolsChartViewBehavior],
     });
   </script>
 </dom-module>
