--- a/frontend/src/uwmctools-view-worldstats-area-full.html
+++ b/frontend/src/uwmctools-view-worldstats-area-full.html
@@ -1,13 +1,14 @@
 <link rel="import" href="uwmctools-view-worldstats-area.html">
 
-<dom-module id="uwmctools-view-worldstats-area-main">
+<dom-module id="uwmctools-view-worldstats-area-full">
     <template>
         <uwmctools-view-worldstats-area area="full"></uwmctools-view-worldstats-area>
     </template>
 
     <script>
     Polymer({
-      is: 'uwmctools-view-worldstats-area-main',
+      is: 'uwmctools-view-worldstats-area-full',
+      behaviors: [UwmctoolsChartViewBehavior],
     });
   </script>
 </dom-module>
