--- a/frontend/src/uwmctools-view-worldstats-area.html
+++ b/frontend/src/uwmctools-view-worldstats-area.html
@@ -33,16 +33,27 @@
             difference            
         ></uwmctools-time-chart>
         <uwmctools-time-chart
-            cols='["Spieler (in Blöcken)", "Server (in Blöcken)", "Frei (in Blöcken)"]'
-            timeline="[[zoneAreas]]"
+            cols='["Spieler", "Server", "Frei"]'
+            timeline="[[zoneAreasTimeline]]"
             title="Zonen Flächen"
         ></uwmctools-time-chart>
         <uwmctools-time-chart
-            cols='["Spieler (in Blöcken)", "Server (in Blöcken)", "Frei (in Blöcken)"]'
-            timeline="[[zoneAreas]]"
+            cols='["Spieler", "Server", "Frei"]'
+            timeline="[[zoneAreasTimeline]]"
             title="Zonen Flächen (Änderungsrate)"
             difference
         ></uwmctools-time-chart>
+        <uwmctools-time-chart
+            cols='["Blöcke"]'
+            timeline="[[zoneAreaAvg]]"
+            title="Spieler Zonen Flächen (Durchschnitt)"
+        ></uwmctools-time-chart>
+        <uwmctools-ratio-chart
+            data="[[zoneAreas]]"
+            exclude='["all"]'
+            labels='["Spieler", "Server", "Frei"]'
+            title="Flächen Anteile"
+        ></uwmctools-ratio-chart>
     </div>
   </template>
 
@@ -51,12 +62,20 @@
       is: 'uwmctools-view-worldstats-area',
       behaviors: [UwmctoolsChartViewBehavior],
       properties: {
+        zoneAreasTimeline: {
+            type: Object,
+            computed: 'computeZoneAreasTimeline(timeline.playerzoneArea, timeline.serverzoneArea, timeline.area)'
+        },
         zoneAreas: {
             type: Object,
-            computed: 'computeZoneAreas(timeline.playerzoneArea, timeline.serverzoneArea, timeline.area)'
+            computed: 'computeZoneAreas(current.playerzoneArea, current.serverzoneArea, current.area)'
+        },
+        zoneAreaAvg: {
+            type: Object,
+            computed: 'computeAvgAreaTimeline(timeline.playerzoneArea, timeline.playerzoneAmount)'
         },
       },
-      computeZoneAreas: function(player, server, full){
+      computeZoneAreasTimeline: function(player, server, full){
         let areas = {};
 
         for(let date in player){
@@ -71,6 +90,25 @@
           areas = {"2000-01-01": [0, 0, 0]}
 
         return areas;
+      },
+      computeAvgAreaTimeline: function(size, amount){
+        let areas = {};
+
+        for(let date in size){
+          areas[date] = size[date] / amount[date];
+        }
+
+        if(Object.keys(areas).length === 0)
+          areas = {"2000-01-01": [0, 0, 0]}
+
+        return areas;
+      },
+      computeZoneAreas: function(player, server, full){
+        return [
+          player,
+          server,
+          full - player - server
+        ]
       }
     });
   </script>
