--- a/frontend/src/uwmctools-app.html
+++ b/frontend/src/uwmctools-app.html
@@ -134,7 +134,8 @@
             attr-for-selected="name"
             fallback-selection="404"
             role="main">
-          <uwmctools-view-users name="players"></uwmctools-view-users>
+          <uwmctools-view-players name="players"></uwmctools-view-players>
+          <uwmctools-view-player name="player" route="{{subroute}}"></uwmctools-view-player>
           <uwmctools-view-faq name="faq"></uwmctools-view-faq>
           <uwmctools-view-default name="default"></uwmctools-view-default>
           <uwmctools-view-plotstats name="plotstats" route="{{subroute}}"></uwmctools-view-plotstats>
