added zones and creative plot view

--- a/frontend/src/shared-styles.html
+++ b/frontend/src/shared-styles.html
@@ -27,6 +27,10 @@
       uwmctools-time-chart {
         padding: 20px;
       }
+
+      uwmctools-zone-card {
+        padding: 20px;
+      }
       uwmctools-ratio-chart {
         padding: 20px;
       }
