--- a/frontend/src/uwmctools-view-player.html
+++ b/frontend/src/uwmctools-view-player.html
@@ -52,8 +52,8 @@
         <paper-tabs sticky selected="{{data.tab}}" attr-for-selected="name" class="drawer-list" role="navigation">
           <paper-tab name="overview">Übersicht</paper-tab>
           <paper-tab name="zones">Zonen</paper-tab>
-          <paper-tab name="creative">Creative Plots</paper-tab>
-          <paper-tab name="plots">Neulingszonen</paper-tab>
+          <paper-tab name="plots">Creative Plots</paper-tab>
+          <paper-tab name="newbee">Neulingszonen</paper-tab>
         </paper-tabs>
       </app-header>
       <div class="content">
@@ -62,7 +62,8 @@
           attr-for-selected="id"
           fallback-selection="overview">
           <uwmctools-view-player-overview id="overview" player="[[player]]" uuid="[[uuid]]"></uwmctools-view-player-overview>
-          <uwmctools-view-player-zones id="zones" zoneIds="[[player.zones]]"></uwmctools-view-player-zones>
+          <uwmctools-view-player-zones id="zones" zone-ids="[[player.zones]]"></uwmctools-view-player-zones>
+          <uwmctools-view-player-plots id="plots" owned-ids="[[player.plots.owned]]" trusted-ids="[[player.plots.trusted]]"></uwmctools-view-player-plots>
         </iron-pages>
       </div>
       <uwmctools-footer></uwmctools-footer>
