added mainmapplots and vote data

--- a/frontend/src/shared-styles.html
+++ b/frontend/src/shared-styles.html
@@ -34,6 +34,9 @@
       uwmctools-ratio-chart {
         padding: 20px;
       }
+      uwmctools-column-timeline-chart {
+        padding: 20px;
+      }
 
       .content {
         @apply(--layout-flex);
