changed player list to online player list

--- a/frontend/src/uwmctools-view-player-overview.html
+++ b/frontend/src/uwmctools-view-player-overview.html
@@ -76,7 +76,7 @@
         </paper-card>
       </div>
       <uwmctools-column-timeline-chart 
-        cols='["Votes (Vote 1)", "Votes (Vote 2)"]'
+        cols='["Vote 1", "Vote 2"]'
         timeline='[[player.votes]]'
         title="Votes pro Monat">
       </uwmctools-column-timeline-chart>
