--- a/frontend/src/uwmctools-app.html
+++ b/frontend/src/uwmctools-app.html
@@ -124,8 +124,7 @@
           <a name="worldstats" href="/worldstats/overview">Statistiken: Zonen</a>
           <a name="plotstats" href="/plotstats/overview">Statistiken: Neulingszonen</a>
           <a name="freeareas" href="/freeareas/">Freie Gebiete</a>
-          <a name="player" href="/player/">Spieler Infos</a>
-          <a name="players" href="/players/">Spieler Liste</a>
+          <a name="players" href="/players/">Online Spieler Liste</a>
           <a name="faq" href="/faq/">FAQ</a>
           <span></span>
           <a href="https://lergin.de">zurück zu Lergin.de</a>
