--- a/frontend/src/uwmctools-view-default.html
+++ b/frontend/src/uwmctools-view-default.html
@@ -12,6 +12,10 @@
 <link rel="import" href="uwmctools-search-bar.html">
 <link rel="import" href="uwmctools-time-chart.html">
 <link rel="import" href="firebase-indexeddb-link.html">
+<link rel="import" href="uwmctools-chart-view-behavior.html">
+<link rel="import" href="uwmctools-ratio-chart.html">
+<link rel="import" href="uwmctools-zone-card.html">
+<link rel="import" href="uwmctools-mapplot-card.html">
 
 <dom-module id="uwmctools-view-default">
   <template>
@@ -36,9 +40,18 @@
       uwmctools-player-card {
           padding: 20px
       }
+
+      a {
+        color: inherit;
+      }
     </style>
 
-    <firebase-indexeddb-link path="uwmctools/general/timeline" data="{{timelines}}"></firebase-indexeddb-link>
+    <firebase-indexeddb-link path="uwmctools/stats/world/timeline/east/playerzoneAmount" data="{{timeline_east}}"></firebase-indexeddb-link>
+    <firebase-indexeddb-link path="uwmctools/stats/world/timeline/north/playerzoneAmount" data="{{timeline_north}}"></firebase-indexeddb-link>
+    <firebase-indexeddb-link path="uwmctools/stats/world/timeline/south/playerzoneAmount" data="{{timeline_south}}"></firebase-indexeddb-link>
+    <firebase-indexeddb-link path="uwmctools/stats/world/timeline/main/playerzoneAmount" data="{{timeline_main}}"></firebase-indexeddb-link>
+    <firebase-indexeddb-link path="uwmctools/stats/world/timeline/full/playerzoneAmount" data="{{timeline_full}}"></firebase-indexeddb-link>
+    <firebase-indexeddb-link path="uwmctools/stats/mainmapplots/current" data="{{plots}}"></firebase-indexeddb-link>
 
     <app-header-layout fullbleed>
       <app-header condenses fixed effects="waterfall">
@@ -47,9 +60,22 @@
           <h1 main-title>Tools und Statistiken für unlimitedworld.de</h1>
         </app-toolbar>
       </app-header>
-      <div class="content">
+      <div class="content flex">
         <div class="app-grid">
-            
+          <a href="/worldstats/overview/"><uwmctools-time-chart
+            cols='["Gesamt", "Center", "Süden", "Norden", "Osten"]'
+            timeline="[[playerZoneAmounts]]"
+            title="Zonen Statistiken"
+          ></uwmctools-time-chart></a>
+          <a href="/plotstats/overview/"><uwmctools-ratio-chart
+            data="[[plots]]"
+            subproperty="free"
+            title="Plot Statistiken"
+            exclude='["all"]'
+            show-value
+        ></uwmctools-ratio-chart></a>
+        <a href="/player/GoodKing/zones"><uwmctools-zone-card zone-id="uwzone_2563"><uwmctools-zone-card></a>
+        <a href="/freeareas/"><uwmctools-mapplot-card plot-id="uwzone_16641"><uwmctools-mapplot-card></a>
         </div>
       </div>
       <uwmctools-footer></uwmctools-footer>
@@ -58,7 +84,26 @@
 
   <script>
     Polymer({
-      is: 'uwmctools-view-default'
+      is: 'uwmctools-view-default',
+      behaviors: [UwmctoolsChartViewBehavior],
+      properties: {
+        playerZoneAmounts: {
+            type: Object,
+            computed: 'computeCombinedTimeline(timeline_full,timeline_main,timeline_north,timeline_south,timeline_east)'
+        },
+      },
+      computeCombinedTimeline: function(... areas){
+        let data = {};
+
+        for(let date in areas[0]){
+          data[date] = [];
+          for(let area in areas){
+            data[date].push(areas[area][date]);
+          }
+        }
+
+        return data;
+      },
     });
   </script>
 </dom-module>
