--- a/frontend/src/uwmctools-view-faq.html
+++ b/frontend/src/uwmctools-view-faq.html
@@ -41,7 +41,7 @@
           <h1 main-title>FAQ</h1>
         </app-toolbar>
       </app-header>
-      <div class="content">
+      <div class="content flex">
         <paper-panel-list>
           <template is="dom-repeat" items="[[faq]]">
             <paper-panel on-tap="_onHeaderTap">
