--- a/frontend/src/uwmctools-view-freeareas.html
+++ b/frontend/src/uwmctools-view-freeareas.html
@@ -33,7 +33,7 @@
           <h1 main-title>Freie 100*100 Zonen</h1>
         </app-toolbar>
       </app-header>
-      <div class="content">
+      <div class="content flex">
         <firebase-indexeddb-link path="uwmctools/freeareas" data="{{freeareas}}"></firebase-indexeddb-link>
 
         <paper-datatable-api data="[[freeareas]]" filters>
