--- a/frontend/src/uwmctools-view-player.html
+++ b/frontend/src/uwmctools-view-player.html
@@ -62,7 +62,7 @@
           </template>
         </paper-tabs>
       </app-header>
-      <div class="content">
+      <div class="content flex">
         <iron-pages
           selected="[[data.tab]]"
           attr-for-selected="id"
