--- a/frontend/src/uwmctools-view-plotstats.html
+++ b/frontend/src/uwmctools-view-plotstats.html
@@ -52,7 +52,7 @@
           <paper-tab name="LazyTown">LazyTown</paper-tab>
         </paper-tabs>
       </app-header>
-      <div class="content">
+      <div class="content flex">
         <iron-pages
           selected="[[data.tab]]"
           attr-for-selected="id"
