--- a/frontend/src/shared-styles.html
+++ b/frontend/src/shared-styles.html
@@ -1,10 +1,10 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
-<link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout.html">
+<link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 
 <!-- shared styles for all views -->
 <dom-module id="shared-styles">
   <template>
-    <style>
+    <style include="iron-flex iron-flex-alignment">
       app-header {
         color: #fff;
         background-color: var(--app-primary-color);
@@ -38,9 +38,9 @@
         padding: 20px;
       }
 
-      .content {
+      /*.content {
         @apply(--layout-flex);
-      }
+      }*/
 
       @media (max-width: 1300px) {
         [main-title] {
@@ -55,7 +55,7 @@
 
       @media (max-width: 639px) {
         [main-title] {
-          margin-left: 20px;    
+          margin-left: 20px;
           font-size: 25px;
         }
 
