--- a/frontend/src/uwmctools-app.html
+++ b/frontend/src/uwmctools-app.html
@@ -120,15 +120,16 @@
         <a href="/"><app-toolbar>Menu</app-toolbar></a>
         <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
           <a name="default" href="/">Übersicht</a>
-          <a name="zonerank" href="/zoneranks/">Rangliste: Zonen</a>
           <a name="worldstats" href="/worldstats/overview">Statistiken: Zonen</a>
           <a name="plotstats" href="/plotstats/overview">Statistiken: Neulingszonen</a>
           <a name="freeareas" href="/freeareas/">Freie Gebiete</a>
           <a name="players" href="/players/">Online Spieler Liste</a>
+          <a name="zoneranks" href="/zoneranks/">Zonen Rangliste</a>
+          <span></span>
           <a name="faq" href="/faq/">FAQ</a>
           <span></span>
-          <a href="https://lergin.de">zurück zu Lergin.de</a>
-          <a href="https://unlimitedworld.de">zu uwmc.de</a>
+          <a href="https://lergin.de">zu Lergin.de</a>
+          <a href="https://unlimitedworld.de">zu UnlimitedWorld</a>
         </iron-selector>
       </app-drawer>
       <iron-pages
@@ -143,6 +144,7 @@
           <uwmctools-view-plotstats name="plotstats" route="{{subroute}}"></uwmctools-view-plotstats>
           <uwmctools-view-worldstats name="worldstats" route="{{subroute}}"></uwmctools-view-worldstats>
           <uwmctools-view-freeareas name="freeareas"></uwmctools-view-freeareas>
+          <uwmctools-view-zoneranks name="zoneranks"></uwmctools-view-zoneranks>
           <uwmctools-view-404 name="404"></uwmctools-view-404>
       </iron-pages>
     </app-drawer-layout>
