--- a/frontend/src/uwmctools-app.html
+++ b/frontend/src/uwmctools-app.html
@@ -131,7 +131,7 @@
           <a href="https://lergin.de">zu Lergin.de</a>
           <a href="https://unlimitedworld.de">zu UnlimitedWorld</a>
           <span></span>
-          <span>Diese Seite wird <b>nicht</b> vom Team von UnlimitedWorld.de betrieben, sondern von einem Spieler.</span>
+          <a>Diese Seite wird <b>nicht</b> vom Team von UnlimitedWorld.de betrieben, sondern von einem Spieler.</a>
         </iron-selector>
       </app-drawer>
       <iron-pages
